Innovate/Css/Darkstyle.css
:root {
    --light-blue-color: #6298bc;  
    --dark-blue-color: #3d6b83;
    --gray-dark-color: #585656;
}

body 
{
    margin: 0;
    background-color: var(--dark-blue-color);
    height: 100%;
    width: 100%;
    color: white;
}

.header
{
    height: 150px;
    padding: 30px;
}

.white
{
    height: 100%;
    background-color: var( --gray-dark-color);
    margin-right: 5px;
    /* margin-left: 10px; */
    text-align: center;
}

.buttonlogin
{
    height: 90px;
    width: 85px;
    text-align: center;
    float: left;
    padding: 10px;
    background-color: var( --gray-dark-color);
    cursor: pointer;
}

.height
{
    height: 90px;
}

.image
{
    width: 100%;
}

.darkmode
{
    height: 100%;
    width: 90px;
    background-color: grey;
    float: left;
    margin-left: -15px;
    margin-right: 35px;
    padding: 0;
}

.worksheet
{
    padding-left: 30px;
    margin-right: 40px;
}

.newsfeed 
{
    height: 755px;
    background-color: var( --gray-dark-color);
    /* margin-left: 10px; */
}

.loginScreen
{
    text-align: center;
}

.loginForm #name
{
    margin-bottom: 8px;
}

.loginForm #password
{
    margin-bottom: 8px;
}

.teacher
{
    height: 60px;
    width: 123%;
    background-color: var( --gray-dark-color);
    padding: 5px;
    padding-left: 10px;
}

.color
{
    background-color: red;
/*    background-color: yellow;
    background-color: green;*/
    width: 5%;
    height: 100%;
    margin-bottom: 20px;
    float: left;
}

.docent
{
    /* float:left; 
    width: 80%;
    margin-left: 10%; */
    font-size: 20pt;
}

.weather-icon
{
    padding: 0;
    margin: 0;
}
#list
{
    list-style-type: none;
}

